Edited apply button and fixed image overflow on apply page

--- a/src/components/whyapply/styles.scss
+++ b/src/components/whyapply/styles.scss
@@ -9,11 +9,12 @@
 }
 
 .title {
+  margin-top: 2vw;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 84vw;
-  height: 40vw;
+  height: 36vw;
 
   h1{
     font-size: clamp(0.6rem, 140px, 2rem); 
@@ -24,10 +25,11 @@
 
   .img {
     position: relative;
-    bottom: 100px;
-    left: 20px;
+    bottom: 24vw;
+    left: calc(-360px + 100vw);
     height: 260px;
     width: auto;
+  
   }
 }
 
@@ -86,7 +88,7 @@
   justify-content: start;
   margin-top: 6vw;
   margin-bottom: 10vw;
-  .button {
+  .applybutton {
     background-color: $accent-color-1;
     width: 112px;
     height: 28px;
@@ -122,6 +124,10 @@
     height: 12vw;
     margin-top: 3.4vw;
     width: 84vw;
+
+    .img {
+      left: calc(-500px + 80vw);
+    }
   }
   .threebox {
     width: 84vw;
@@ -175,10 +181,10 @@
     display: none;
   } 
   .buttoncont2 {
-    height: 3.8vw;
-    width: 13.8vw;
+    height: 6vw;
+    width: 14vw;
     display: flex;
-    justify-content: center;
+    
   }
   .buttoncont {
     width: 84vw;
@@ -186,36 +192,44 @@
     margin-top: 0vw;
     margin-bottom: 4.2vw;
 
-    .button {
-      margin-left: 16px;
+    .applybutton {
       height: 3.8vw;
-      width: 13.8vw;
+      width: 14vw;
       text-decoration: none;
       .text {
-        font-size: 2.8vw;
+        font-size: 2.4vw;
       }
       .buttonstar {
-        height: 2.6vw;
+        height: 2vw;
         width: auto;
         margin-left: 0.8vw;
       }
       
     }
-
-    .button:hover {
-      size: 75%;
-      text-decoration: none;
-      .text {
-        font-size: 2.6vw;
-      }
-      .buttonstar {
-        height: 2.4vw;
-        width: auto;
-      }
-      
+    .applybutton {
+      display: flex !important;
+      flex-direction: row;
     }
 
-    .button:active {
+    .applybutton:hover {
+      text-decoration: none;
+    }
+
+
+    .shrink-on-hover {
+      display: inline-block;
+      vertical-align: middle;
+      -webkit-transform: perspective(1px) translateZ(0);
+      transform: perspective(1px) translateZ(0);
+      box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+      -webkit-transition-duration: 0.3s;
+      transition-duration: 0.3s;
+      -webkit-transition-property: transform;
+      transition-property: transform;
+    }
+    .shrink-on-hover:hover, .shrink-on-hover:focus, .shrink-on-hover:active {
+      -webkit-transform: scale(0.9);
+      transform: scale(0.9);
       background-color: #008437;
     }
 
